@@ -1,7 +1,12 @@
 -server
--Xms3g
--Xmx3g
+-Xmx{{ druid_overlord_heap_size }}
+-Xms{{ druid_overlord_heap_size }}
+-XX:NewSize={{ druid_overlord_max_new_size }}
+-XX:MaxNewSize={{ druid_overlord_max_new_size }}
+-XX:+UseConcMarkSweepGC
+-XX:+PrintGCDetails
+-XX:+PrintGCTimeStamps
 -Duser.timezone=UTC
 -Dfile.encoding=UTF-8
--Djava.io.tmpdir=var/tmp
+-Djava.io.tmpdir=/mnt/tmp
 -Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager
